--- a/app_meu_pacote/templates/cadastrar_encomenda.html
+++ b/app_meu_pacote/templates/cadastrar_encomenda.html
@@ -13,7 +13,7 @@
 </div>
 {% endif %}
 
-<input class="form-control" id="myInput" type="text" placeholder="Pesquisar Morador, Apartamento ou Condomínio">
+<input class="form-control" id="myInput" type="text" placeholder="Pesquisar Condômino, Apartamento ou Condomínio">
 <br>
 
 <form method="post">
