--- a/app_meu_pacote/templates/encomenda.html
+++ b/app_meu_pacote/templates/encomenda.html
@@ -3,7 +3,7 @@
 {% block title %}
     Meu Pacote - Encomenda
 {% endblock %}
-
+# mostra dados encomenda e possibilita a baixa da encomenda
 {% block content %}
 <br>
 <h3 class="text-center fw-bold">Dados da Encomenda</h3>
