--- a/app_meu_pacote/templates/base.html
+++ b/app_meu_pacote/templates/base.html
@@ -38,14 +38,14 @@
             <li class="nav-item">
               <a class="nav-link active" href="/minhas_encomendas">Minhas Encomendas</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/cadastrar_morador">Cadastrar Morador</a>
-            </li>
+            <!--  <li class="nav-item"> -->
+            <!--  <a class="nav-link active" href="/cadastrar_morador">Cadastrar Morador</a> -->
+            <!--</li> -->
             <li class="nav-item">
               <a class="nav-link active" href="/cadastrar_funcionario">Cadastrar Funcionário</a>
             </li>
           </ul>
-
+          <! -- Página HTML para Buscar Encomendas -->
           {% if user.is_authenticated %}
           <li class="nav-item dropdown d-flex">
             <a class="nav-link dropdown-toggle text-white me-auto" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
