--- a/app_meu_pacote/templates/register_morador.html
+++ b/app_meu_pacote/templates/register_morador.html
@@ -1,6 +1,6 @@
-<! -- Página HTML para registrar morador -->
+<!-- Página HTML para registrar morador -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <title>Cadastro de Morador</title>
@@ -9,7 +9,13 @@
     <h1>Cadastro de Morador</h1>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        <p>Usuário: {{ form.username }}</p>
+        <p>Senha: {{ form.password1 }}</p>
+        <p>Confirmação de senha: {{ form.password2 }}</p>
+        <p>Email: {{ form.email }}</p>
+        <p>Nome: {{ form.nome }}</p>
+        <p>Telefone: {{ form.telefone }}</p>
+        <p>Apartamento: {{ form.apartamento }}</p>
         <button type="submit">Registrar</button>
     </form>
 </body>
