--- a/app_meu_pacote/templates/base.html
+++ b/app_meu_pacote/templates/base.html
@@ -70,7 +70,11 @@
     {% block content %}
     {% endblock %}
   </main>
+  <p>Morador, cadastra-se aqui.</p>
+    <!-- Link para a página de cadastro de morador -->
+    <a href="{% url 'register_morador' %}">Cadastrar Morador</a>
   <footer>
+
     <p class="text-center">&copy; Meu Pacote - Projeto Integrador Univesp - Santos/SP</p>
     <p class="text-center">As informa&ccedil;&otilde;es ser&atilde;o tratadas nos termos da LGPD.</p>
   </footer>
