--- a/app_meu_pacote/templates/registro_sucesso.html
+++ b/app_meu_pacote/templates/registro_sucesso.html
@@ -2,10 +2,11 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>Registro Concluído</title>
+    <title>Registro Sucesso</title>
 </head>
 <body>
-    <h1>Registro Concluído com Sucesso!</h1>
-    <p>Parabéns, seu cadastro foi realizado com sucesso.</p>
+    <h1>Cadastro Realizado com Sucesso!</h1>
+    <p>Seu cadastro foi realizado com sucesso. Clique no link abaixo para fazer login.</p>
+    <a href="{% url 'login_view' %}">Fazer Login</a>
 </body>
 </html>
