--- a/app_meu_pacote/static/css/styles.css
+++ b/app_meu_pacote/static/css/styles.css
@@ -1,63 +1,75 @@
-html {
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+/* Variáveis Globais */
+:root {
+  --primary-color: #007bff;
+  --secondary-color: #6c757d;
+  --font-family: 'Arial', sans-serif;
+  --footer-height: 100px;
 }
 
+/* Reset básico para margens e padding */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;  /* Certifique-se de que a altura do html e body ocupe toda a tela */
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;  /* Faz os elementos internos se organizarem em uma coluna */
+}
+
+/* Links */
+a {
+  color: var(--primary-color);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/* Cabeçalho */
+header {
+  background: var(--primary-color);
+  color: #fff;
+  padding: 10px 20px;
+  text-align: center;
+}
+
+/* Conteúdo Principal */
+
+.main-content {
+  flex: 1;  /* Ocupa todo o espaço disponível */
+  padding: 20px;
+}
+
+/* Rodapé */
 footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+  background: var(--secondary-color);
+  color: #fff;
+  height: var(--footer-height);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;  /* Garante que o footer ocupe toda a largura */
+}
+/* Responsividade */
+@media (max-width: 768px) {
+
+  .main-content,
+  footer {
+      padding: 10px;
+  }
 }
 
-.meu-pacote {
-  padding-left: 10px;
+/* Classes auxiliares */
+.text-center {
+  text-align: center;
 }
 
-table {
-    border-collapse: collapse;
-    width: 100%;
-    margin-bottom: 1rem;
-  }
-  
-  th, td {
-    text-align: left;
-    padding: 0.5rem;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  th {
-    background-color: #f5f5f5;
-  }
-  
-  /* Estilos para os botões */
-  .button {
-    display: inline-block;
-    padding: 0.5rem;
-    background-color: #007bff;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 3px;
-  }
-  
-  .button:hover {
-    background-color: #0069d9;
-  }
-  
-  /* Estilos para as mensagens de sucesso e erro */
-  .success {
-    background-color: #d4edda;
-    color: #155724;
-    padding: 0.5rem;
-    border-radius: 3px;
-    margin-bottom: 1rem;
-  }
-  
-  .error {
-    background-color: #f8d7da;
-    color: #721c24;
-    padding: 0.5rem;
-    border-radius: 3px;
-    margin-bottom: 1rem;
-  }
+.hidden {
+  display: none;
+}
